<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/fbi_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />

                <TextView
                    android:id="@+id/fbi_book_authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
            </LinearLayout>

            <ImageView
                android:id="@+id/fbi_book_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#FF1199"
                android:layout_margin="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hint_publisher" />

                <TextView
                    android:id="@+id/fbi_book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Publisher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_editionYear" />

                <TextView
                    android:id="@+id/fbi_book_edition_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1990" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hint_language" />

                <TextView
                    android:id="@+id/fbi_book_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Language" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_condition" />

                <TextView
                    android:id="@+id/fbi_book_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perfect" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/hint_tags" />

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group"
                style="@style/TagGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLength="@integer/max_length_tag"
                android:padding="16dp"
                app:atg_isAppendMode="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/hint_owner" />

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_owner"
                style="@style/TagGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLength="@integer/max_length_tag"
                android:padding="16dp"
                app:atg_isAppendMode="false" />

            <Button
                android:id="@+id/fbi_show_profile_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/show_profile" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>